changed reservation endpoint to use userId, added task queue, updated swagger docs
